--- a/create_quiz.html
+++ b/create_quiz.html
@@ -3,37 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Quiz</title>
-    <style>
-        body {
-            background-color: #f0f8ff;
-            color: #ff69b4;
-            font-family: Arial, sans-serif;
-        }
-        label, input {
-            font-size: 1.2em;
-            margin: 10px;
-        }
-        button {
-            background-color: #ff69b4;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            font-size: 1em;
-            cursor: pointer;
-        }
-    </style>
+    <title>Truth?? - Create Quiz</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Create Your Quiz</h2>
-    <form id="quizForm">
-        <label for="numQuestions">Number of Questions:</label>
-        <input type="number" id="numQuestions" min="1" max="10"><br/>
-        <label for="numOptions">Number of Options per Question:</label>
-        <input type="number" id="numOptions" min="2" max="5"><br/>
-        <button type="button" onclick="generateQuizForm()">Generate Quiz Form</button>
-    </form>
-    <div id="quizContainer"></div>
-    <script src="quiz_creation.js"></script>
+    <div class="container">
+        <h2>Create Your Quiz</h2>
+        <form id="quizForm"></form>
+        <button onclick="submitQuizForm()">Submit</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
+
