--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Home</title>
-    <style>
-        body {
-            background-color: #f0f8ff; /* light blue */
-            text-align: center;
-            color: #ff69b4; /* pink */
-            font-family: Arial, sans-serif;
-        }
-        a {
-            text-decoration: none;
-            color: #ff69b4;
-            font-size: 1.5em;
-            margin: 10px;
-        }
-    </style>
+    <title>Truth?? - Welcome</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to the Anime Quiz World!</h1>
-    <img src="https://example.com/anime-image.jpg" alt="Anime Character" style="width:300px;height:auto;">
-    <p><a href="create_quiz.html">Create a New Quiz</a></p>
+    <div class="container">
+        <h1>Welcome to Truth??</h1>
+        <img src="https://i.pinimg.com/originals/5d/1a/79/5d1a7972473b8c146db7f7753e6cfae4.jpg" alt="Anime Welcome Image" class="center-img">
+        <h2>Do you want to create a quiz?</h2>
+        <button onclick="showQuizOptions()">Yes</button>
+        <button onclick="alert('Maybe next time!')">No</button>
+
+        <div id="quizOptions" style="display:none;">
+            <h3>Enter number of questions and options:</h3>
+            <label for="numQuestions">Number of Questions:</label>
+            <input type="number" id="numQuestions" min="1" max="10"><br/>
+            <label for="numOptions">Number of Options per Question:</label>
+            <input type="number" id="numOptions" min="2" max="5"><br/>
+            <button onclick="redirectToQuizCreation()">OK</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
